# meco_truck

./: LICENSE  README.md
docker/: Dockerfile  build_docker.sh  docker_exec.sh  run_container.sh  run_ros_docker.sh  start_docker.sh
firi_msgs/: CMakeLists.txt  package.xml
firi_msgs/msg/: HalfPlane2D.msg  Polytope2D.msg  Polytope2DStamped.msg
firi_ros/: CMakeLists.txt  package.xml
firi_ros/config/: firi_params.yaml  firi_path_params.yaml  firi_scan_params.yaml
firi_ros/include/firi_ros/: firi_solver.hpp  mvie2d.hpp  sdmn2d.hpp  voxel_filter.hpp
firi_ros/launch/: firi.launch.py  firi_pcl.launch.py
firi_ros/src/: firi_grid_node.cpp  firi_path_grid_node.cpp  firi_scan_node.cpp  pcl_filter_node.cpp
meco_truck_sim/: package.xml  setup.cfg  setup.py
meco_truck_sim/launch/: map_server.launch.py  simulation.launch.py
meco_truck_sim/maps/: figure_8.yaml  grid_world.yaml  intersection.yaml  intersection_roundabout.yaml  irregular_8.yaml  parking_one.yaml  parking_two.yaml  racetrack.yaml  serpentine.yaml  slalom.yaml  t_junction.yaml
meco_truck_sim/meco_truck_sim/: estimator_node.py  simulation_node.py
meco_truck_sim/rviz/: truck.rviz
meco_truck_sim/scripts/: generate_custom_map.py
meco_truck_sim/urdf/: truck.urdf
mpc_cbf/: package.xml  setup.cfg  setup.py
mpc_cbf/config/: mpc_cbf_params.yaml
mpc_cbf/launch/: mpc_cbf.launch.py
mpc_cbf/mpc_cbf/: goal_to_plan_bridge.py  mpc_cbf_node.py  mpc_lse.py
truck_bringup/: CMakeLists.txt  package.xml
truck_bringup/config/: nav2_planner_params.yaml
truck_bringup/launch/: bringup.launch.py
truck_bringup/rviz/: truck_bringup.rviz
