<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>truck_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for the truck AMR system</description>
  <maintainer email="alex@todo.com">alex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies (packages launched by this bringup) -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>meco_truck_sim</exec_depend>
  <exec_depend>firi_ros</exec_depend>
  <exec_depend>firi_msgs</exec_depend>
  <exec_depend>mpc_cbf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
